api/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    istio-injection: enabled
    istio.io/rev: asm-managed-rapid
spec: {}
status: {}
